<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.utneza.seleccionmultiple.MainActivity">
    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/pregunta"
                android:id="@+id/textView" />

            <CheckBox
                android:id="@+id/sh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shakira"
                />
            <CheckBox
                android:id="@+id/li"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lionen"
                />
            <CheckBox
                android:id="@+id/pe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peyton"
                />
            <CheckBox
                android:id="@+id/ri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rihana"
                />

            <CheckBox
                android:id="@+id/cr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cristiano"
                />
            <TextView
                android:id="@+id/salida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
